--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <title>
     {% if page.title %}
 	       {{ page.title | replace:'&nbsp;',' ' | strip_html | escape }}
-           {% unless page.bodyclass == "home" %}- {{ site.title }} {% endunless %}
+           {% unless page.bodyclass == "home" %} - {{ site.title }} {% endunless %}
     {% else %}
 	       {{ site.title }}
     {% endif %}
@@ -59,8 +59,7 @@
     <aside>
         <div class="book-title">
             {% if page.bodyclass == "home" %}
-                <h1>Schoewilliam</h1>
-                <small>Open·Web Designer</small>
+                <h1>reify</h1>
             {% else %}
                 <h1>{{ page.title }}</h1>
             {% endif %}
