Fix Problem with image scaling

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
     {% if page.headimg_url %}
     <style>
         body:before {
-            background-image: url({{ page.headimg_url }});
+            background-image: none;
             background-position: center center;
             opacity: .4;
         }
