--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <nav id="nav">
-    {% for menu in site.data.nav[page.lang] %}
+    {% for menu in site.data.nav %}
         <a href="{{ menu[1].url }}">{{ menu[1].title }}</a>
     {% endfor %}
 </nav>
