--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -33,7 +33,7 @@ bodyclass: home
 
             <ul class="index">
                 <li>
-                    <a href="{{ post.url }}#cssframework">
+                    <a href="{{ post.url }}">
                         <h2 class="more"><span class="mega-octicon octicon-plus"></span></h2>
                         <time>All my works</time>
                     </a>
