Add Page Preloader

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,7 @@
   </head>
   
   <body {% if page.bodyclass %}class="{{ page.bodyclass }}"{% endif %}>
+    {% include page-preloader.html %}
   
     <header>
         <div class="left">
