Refactor Page Preloader

--- a/_includes/page-preloader.html
+++ b/_includes/page-preloader.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" />
-<link rel="stylesheet" type="text/css" href="stylesheets/effect.css" />
+<link rel="stylesheet" type="text/css" href="stylesheets/page-preloader-effect.css" />
 <script src="js/modernizr.custom.js"></script>
 <div id="ip-container" class="ip-container">
 	<!-- initial header -->
@@ -17,4 +17,4 @@
 </div><!-- /container -->
 <script src="js/classie.js"></script>
 <script src="js/pathLoader.js"></script>
-<script src="js/main.js"></script>
+<script src="js/page-preloader-main.js"></script>
