Add author to posts and fix link to home problem

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
                 </span>
             </a>
             {% unless page.bodyclass == "home" %}
-            <a class="small-site-title">reify</a>
+            <a href="/" class="small-site-title">reify</a>
             {% else %}
                 <a href="http://twitter.com/reifycode" class="social twitter" title="Twitter Profile"></a>
                 <a href="http://github.com/reifycode" class="social github"><span class="mega-octicon octicon-mark-github" title="Github Profile"></span></a>
