Refactor author pages and add about section

--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -3,13 +3,22 @@ layout: default
 bodyclass: author
 ---
 
+<section id="about">
+    <div>
+        {% assign author = site.data.authors[page.author] %}
+        {{ author.description }}
+    </div>
+</section>
+
 <section id="allposts">
     <div>
+        <hr class="large title">
+        <h1>All Posts</h1>
         <ul class="index">
             {% assign posts=site.posts | where:"lang", page.lang | where:"type", posts %}
             {% for post in posts %} 
-            {% if post.author %}
-            <li class="no-display {{ post.author }}">
+            {% if post.author == page.author %}
+            <li class="{{ post.author }}">
             <a href="{{ post.url }}">
                     <h2>{{ post.title | replace: '<br>', '' }}</h2>
                     <time datetime='{{ post.date | date: "%Y-%m-%d" }}'>{% include date.html date=post.date %}</time>
@@ -33,8 +42,8 @@ bodyclass: author
               {% for posts in category %}
                 {% for post in posts %} 
                 {% if post.url %}
-                {% if post.author %}
-                <li class="no-display {{ post.author }}">
+                {% if post.author == page.author%}
+                <li class="{{ post.author }}">
                     <a href="{{ post.url }}">
                     <h2>{{ post.title | replace: '<br>', '' }} {% if post.link %}<span class="oi" data-glyph="external-link" style="color:#888; font-size:50%;"></span>{% endif %}</h2>
                     <time class="top" datetime='{{ post.date | date: "%Y-%m-%d" }}'>{{ post.date | date: "%-d %B %Y" }}</time>
@@ -60,18 +69,18 @@ bodyclass: author
 </style>
 
 <script type="text/javascript">
-    if(document.getElementById("allposts").getElementsByClassName("{{ page.url | replace:'/', '' }}").length == 0) {
+    if(document.getElementById("allposts").getElementsByClassName("{{ page.author }}").length == 0) {
         document.getElementById("allposts").innerHTML = "<div><h1>No Posts Yet!</h1></div>";
     }
 
-    if(document.getElementById("categories").getElementsByClassName("{{ page.url | replace:'/', '' }}").length == 0) {
+    if(document.getElementById("categories").getElementsByClassName("{{ page.author }}").length == 0) {
         document.getElementById("categories").className = "no-display";
     }
 
     {% assign sortedcats = site.categories | sort %}
     {% for category in sortedcats %}
         if(document.getElementById("{{ category | first | remove:' ' }}")
-            .getElementsByClassName("{{ page.url | replace:'/', '' }}").length == 0) {
+            .getElementsByClassName("{{ page.author }}").length == 0) {
             document.getElementById("{{ category | first | remove:' ' }}").className = "no-display";
         }
     {% endfor %}
